<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nconklin.com.calculator.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnClear"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnClear"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnParen"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="0"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnParen"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="0"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnPercent"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnDivide"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn7"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn8"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn9"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnMultiply"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="2"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn4"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="3"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn1"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="4"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnPlusMinus"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="2"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn5"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="2"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn6"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnSubtract"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="3"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn2"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="3"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn3"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnAdd"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_row="4"
            android:backgroundTint="@color/colorPrimaryLight"
            android:fontFamily="@font/oswald"
            android:text="@string/btn0"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnPeriod"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_row="4"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnPeriod"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/oswald"
            android:text="@string/btnEquals"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="sans" />

    </GridLayout>

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:cursorVisible="false"
        android:fontFamily="@font/oswald"
        android:maxLength="20"
        android:textColor="@color/colorSecondary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12345678901234567890" />

    <TextView
        android:id="@+id/txtLeftSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/oswald"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/txtOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="calculation" />

</android.support.constraint.ConstraintLayout>
